[gd_scene load_steps=2 format=3 uid="uid://2rwurd7vj5as"]

[ext_resource type="Script" uid="uid://djj3dhhncml8f" path="res://Scripts/calculadora.gd" id="1_hoeks"]

[node name="Calculadora" type="Node2D"]
script = ExtResource("1_hoeks")

[node name="LblCalculadora" type="Label" parent="."]
offset_left = 107.0
offset_top = 24.0
offset_right = 324.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
text = "CALCULADORA"

[node name="LblOperando1" type="Label" parent="."]
offset_left = 153.0
offset_top = 89.0
offset_right = 301.0
offset_bottom = 131.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Operando 1:"

[node name="LblOperando2" type="Label" parent="."]
offset_left = 147.0
offset_top = 147.0
offset_right = 301.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Operando 2:"

[node name="LblResultado" type="Label" parent="."]
offset_left = 345.0
offset_top = 209.0
offset_right = 545.0
offset_bottom = 251.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 30
text = "---"

[node name="LblIgual" type="Label" parent="."]
offset_left = 226.0
offset_top = 208.0
offset_right = 301.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "="
horizontal_alignment = 2

[node name="TxtOperando1" type="TextEdit" parent="."]
offset_left = 344.0
offset_top = 89.0
offset_right = 544.0
offset_bottom = 131.0

[node name="TxtOperando2" type="TextEdit" parent="."]
offset_left = 344.0
offset_top = 142.0
offset_right = 544.0
offset_bottom = 184.0

[node name="BtnCalcular" type="Button" parent="."]
offset_left = 345.0
offset_top = 285.0
offset_right = 545.0
offset_bottom = 316.0
text = "CALCULAR"

[connection signal="pressed" from="BtnCalcular" to="." method="_on_btn_calcular_pressed"]
